--- a/Lab1/db/04_hex_display.lpc.html
+++ b/Lab1/db/04_hex_display.lpc.html
@@ -96,6 +96,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >clkdmncrossing</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >grey_data|altsyncram_component|auto_generated</TD>
 <TD >5</TD>
 <TD >0</TD>
@@ -128,7 +144,7 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >Clkdiv_update</TD>
+<TD >Clk_b</TD>
 <TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -144,7 +160,55 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >clkdiv_counter</TD>
+<TD >Clk_a</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >Sendler</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >Updater</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >Counter</TD>
 <TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
